# MessegerApp-Network-Programming

./: .gitignore  Makefile  README.md  users.db
include/: common.h
qt-client/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
qt-client/include/: common.h
server/: Makefile  users.sqlite
server/include/: common.h
server/src/: client.cpp  server.cpp
src/: client.cpp  server.cpp
